# blue_box

./: .gitignore  main.py  pyproject.toml
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/v1/: products.py
backend/src/core/: database.py
backend/src/core/product_maker/: __init__.py
frontend/: index.html  package.json
frontend/routers/: main_router.py
frontend/src/: App.vue
frontend/src/pages/: HomePage.vue
frontend/src/router/: index.js
frontend/static/: main_styles.css  styles.css
frontend/static/styles/: index_styles.css  login_page_styles.css
frontend/templates/: base.html  index.html  login_page.html  raw_storage.html
frontend/templates/reusable/: navbar.html
src/: database.py  main.py  models.py  templates.py
src/core/crud/: raw_crud.py
src/core/schemas/: __init__.py  raw_schemas.py
src/core/services/: raw_service.py
src/core/views/: router.py
src/database/: __init__.py  database_helper.py
src/database/models/: __init__.py  base.py  raws.py
src/orders_maker/routers/: order_router.py
src/product_maker/routers/: product_router.py
src/raw_storage/models/: database_models.py  models.py  response_models.py
src/raw_storage/repository/: repository.py
src/raw_storage/routers/: raw_router.py
src/raw_storage/service/: service.py
src/semiproducts/repository/: semiproduct_repository.py
src/semiproducts/routers/: semiproduct_router.py
src/semiproducts/service/: semiproducts_service.py
src/users/: backend.py  database.py  user_manager.py
tests/raw_storage/: test_raw_storage.py
(+21 files in other folders)
