[tool.poetry]
name = "blue-box"
version = "0.1.0"
description = ""
authors = ["amoglock <amoglock@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.5"
trio = "^0.25.0"
sqlalchemy = "^2.0.29"
sqlmodel = "^0.0.18"


[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
