[project]
name = "src"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
dependencies = [
    "fastapi>=0.110.3,<0.111.0",
    "uvicorn>=0.29.0,<0.30.0",
    "httpx>=0.27.0,<0.28.0",
    "trio>=0.25.0,<0.26.0",
    "sqlalchemy>=2.0.29,<3.0.0",
    "sqlmodel>=0.0.18,<0.0.19",
    "jinja2>=3.1.5,<4.0.0",
]

[dependency-groups]
test = [
    "pytest-asyncio>=0.23.5,<0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
